--- a/src/integrators/SConscript
+++ b/src/integrators/SConscript
@@ -4,8 +4,16 @@ plugins += env.SharedLibrary('ao', ['direct/ao.cpp'])
 plugins += env.SharedLibrary('direct', ['direct/direct.cpp'])
 
 # tof path (added)
-plugins += env.SharedLibrary('dopplertofpath', ['tofpath/doppler_tof_path.cpp'])
-plugins += env.SharedLibrary('velocity', ['tofpath/velocity.cpp'])
+# plugins += env.SharedLibrary('dopplertofpath', ['tofpath/doppler_tof_path.cpp'])
+plugins += env.SharedLibrary('fmcw', ['fmcw/fmcw.cpp'])
+plugins += env.SharedLibrary('fmcwstatic', ['fmcw/fmcw_static.cpp'])
+plugins += env.SharedLibrary('fmcwdynamic', ['fmcw/fmcw_dynamic.cpp'])
+plugins += env.SharedLibrary('fmcwdiff', ['fmcw/fmcw_difference.cpp'])
+plugins += env.SharedLibrary('linearity', ['fmcw/linearity.cpp'])
+plugins += env.SharedLibrary('transient', ['transient/transientpath.cpp'])
+
+plugins += env.SharedLibrary('velocity', ['geometry/velocity.cpp'])
+plugins += env.SharedLibrary('depth', ['geometry/depth.cpp'])
 
 plugins += env.SharedLibrary('path', ['path/path.cpp'])
 plugins += env.SharedLibrary('volpath', ['path/volpath.cpp'])
