--- a/src/integrators/SConscript
+++ b/src/integrators/SConscript
@@ -10,7 +10,7 @@ plugins += env.SharedLibrary('fmcwstatic', ['fmcw/fmcw_static.cpp'])
 plugins += env.SharedLibrary('fmcwdynamic', ['fmcw/fmcw_dynamic.cpp'])
 plugins += env.SharedLibrary('fmcwdiff', ['fmcw/fmcw_difference.cpp'])
 plugins += env.SharedLibrary('fmcwinstant', ['fmcw/fmcw_instant.cpp'])
-plugins += env.SharedLibrary('fmcwinstantfrequency', ['fmcw/fmcw_instant_frequency.cpp'])
+plugins += env.SharedLibrary('fmcwinstanttransient', ['fmcw/fmcw_instant_frequency.cpp'])
 plugins += env.SharedLibrary('linearity', ['fmcw/linearity.cpp'])
 plugins += env.SharedLibrary('transient', ['transient/transientpath.cpp'])
 
