--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ mitsuba.*.log
 
 /src/integrators/tofpathtrash
 /src/integrators/tofpath/difference.cpp
+/src/integrators/event
 /src/librender/trash
 *.npy
 /doppler_things
