--- a/src/integrators/SConscript
+++ b/src/integrators/SConscript
@@ -5,22 +5,17 @@ plugins += env.SharedLibrary('direct', ['direct/direct.cpp'])
 
 # tof path (added)
 # plugins += env.SharedLibrary('dopplertofpath', ['tofpath/doppler_tof_path.cpp'])
-# plugins += env.SharedLibrary('fmcw', ['fmcw/fmcw.cpp'])
-# plugins += env.SharedLibrary('fmcwstatic', ['fmcw/fmcw_static.cpp'])
-# plugins += env.SharedLibrary('fmcwdynamic', ['fmcw/fmcw_dynamic.cpp'])
-# plugins += env.SharedLibrary('fmcwdiff', ['fmcw/fmcw_difference.cpp'])
-plugins += env.SharedLibrary('fmcwinstant', ['fmcw/fmcw_instant.cpp'])
-plugins += env.SharedLibrary('fmcwinstanttransient', ['fmcw/fmcw_instant_frequency.cpp'])
-# plugins += env.SharedLibrary('linearity', ['fmcw/linearity.cpp'])
+plugins += env.SharedLibrary('fmcwfield', ['fmcw/fmcw_field.cpp'])
+plugins += env.SharedLibrary('fmcwpsd', ['fmcw/fmcw_psd.cpp'])
 # plugins += env.SharedLibrary('transient', ['transient/transientpath.cpp'])
-plugins += env.SharedLibrary('timegatedpath', ['transient/timegatedpath.cpp'])
+# plugins += env.SharedLibrary('timegatedpath', ['transient/timegatedpath.cpp'])
 
-plugins += env.SharedLibrary('eventpath', ['event/eventpath.cpp'])
-plugins += env.SharedLibrary('eventpathcorrelated', ['event/eventpathcorrelated.cpp'])
-plugins += env.SharedLibrary('eventpathcorrelatedsingle', ['event/eventpathcorrelatedsingle.cpp'])
-plugins += env.SharedLibrary('eventpathsmooth', ['event/eventpathsmooth.cpp'])
-plugins += env.SharedLibrary('eventpathexact', ['event/eventpathexact.cpp'])
-plugins += env.SharedLibrary('eventpathcorrelatedrough', ['event/eventpathcorrelatedrough.cpp'])
+# plugins += env.SharedLibrary('eventpath', ['event/eventpath.cpp'])
+# plugins += env.SharedLibrary('eventpathcorrelated', ['event/eventpathcorrelated.cpp'])
+# plugins += env.SharedLibrary('eventpathcorrelatedsingle', ['event/eventpathcorrelatedsingle.cpp'])
+# plugins += env.SharedLibrary('eventpathsmooth', ['event/eventpathsmooth.cpp'])
+# plugins += env.SharedLibrary('eventpathexact', ['event/eventpathexact.cpp'])
+# plugins += env.SharedLibrary('eventpathcorrelatedrough', ['event/eventpathcorrelatedrough.cpp'])
 
 plugins += env.SharedLibrary('velocity', ['geometry/velocity.cpp'])
 plugins += env.SharedLibrary('depth', ['geometry/depth.cpp'])
